# fipe-hunter

./: .gitignore  ARCHITECTURE.md  README.md
src/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml
src/apps/fastapi-app/: pyproject.toml
src/apps/fastapi-app/alembic/: env.py
src/apps/fastapi-app/alembic/versions/: 5064ad40c48c_create_all_tables.py  a1b2c3d4e5f6_fix_sequences.py  bb5377a56585_initial_schema.py  c3d4e5f6a7b8_fix_sequences_v2.py
src/apps/fastapi-app/app/: auth.py  limiter.py
src/apps/fastapi-app/app/main/: __init__.py
src/apps/fastapi-app/app/main/factories/: admin_factory.py  fipe_factory.py  search_factory.py
src/apps/fastapi-app/app/middleware/: session_middleware.py
src/apps/fastapi-app/app/routes/: admin_routes.py  auth_routes.py  dashboard_routes.py  favorites_routes.py  fipe_routes.py  listing_routes.py  proxy_routes.py  scrape_routes.py  search_routes.py
src/apps/fastapi-app/tests/: conftest.py  test_admin_routes.py  test_favorites_routes.py  test_proxy_routes.py  test_rate_limiting.py  test_search_routes.py
src/apps/fastapi-app/tests/adapters/: test_listing_routes.py
src/apps/fastapi-app/tests/e2e/: conftest.py  test_favorites.spec.py  test_fipe_lookup_e2e.py  test_on_demand_search.spec.py  test_scrapers_smoke.py
src/apps/fastapi-app/tests/routes/: test_fipe_routes.py
src/apps/fastapi-app/tests/smoke/: test_prod_smoke.py
src/apps/vite-app/: index.html  package-lock.json  package.json  vite.config.ts
src/apps/vite-app/src/: App.tsx  index.css  main.tsx  theme.config.ts  theme.json
src/apps/vite-app/src/components/: AdminGuard.tsx  DiscountChart.tsx  FilterBar.tsx  FipeReferenceCard.stories.tsx  FipeReferenceCard.tsx  Layout.tsx  OpportunityTable.tsx  SearchForm.tsx  SummaryCards.tsx
src/apps/vite-app/src/hooks/: useAdminHealth.ts  useBreakpoint.ts  useFavorites.ts  useOpportunities.ts
src/apps/vite-app/src/pages/: AdminLogin.tsx  Analytics.tsx  Dashboard.tsx  Favorites.tsx  Historical.tsx  LandingPage.tsx  Monitoring.tsx  Opportunities.tsx  SettingsPage.tsx
src/apps/vite-app/src/services/: api.ts
src/apps/vite-app/src/store/: adminAuth.ts  favorites.ts  filters.ts
src/apps/vite-app/src/types/: opportunity.ts
src/libs/adapters-py/: pyproject.toml
src/libs/adapters-py/fipe_adapters/controllers/: __init__.py  favorites_controller.py  fipe_controller.py  listing_controller.py  opportunity_controller.py  scrape_controller.py  search_controller.py
src/libs/adapters-py/tests/controllers/: test_fipe_controller.py  test_listing_controller.py
src/libs/business-py/: pyproject.toml
src/libs/business-py/fipe_business/application/ports/: __init__.py  alert_repository.py  alert_service.py  cache_repository.py  carwizard_service.py  favorite_repository.py  fipe_client.py  listing_repository.py  opportunity_repository.py  rate_limit_event_repository.py  scraper.py  sheets_service.py
src/libs/business-py/fipe_business/application/use_cases/: __init__.py  calculate_opportunity_score.py  compare_prices.py  (+4 more)
src/libs/business-py/tests/: conftest.py
src/libs/business-py/tests/domain/: test_listing_entity.py
src/libs/business-py/tests/use_cases/: __init__.py  test_process_new_listings.py  test_scrape_listings.py
src/libs/infra-py/: pyproject.toml
src/libs/infra-py/fipe_infra/clients/: __init__.py  fipe_client.py
src/libs/infra-py/fipe_infra/database/: models.py  session.py
src/libs/infra-py/fipe_infra/repos/: alert_repository.py  api_hit_repository.py  cache_repository.py  catalog_cache_repository.py  favorite_repository.py  listing_repository.py  opportunity_repository.py  rate_limit_event_repository.py  search_cache_repository.py
src/libs/infra-py/fipe_infra/scrapers/: __init__.py  curl_olx_scraper.py  mock_scraper.py  webmotors_scraper.py
src/libs/infra-py/fipe_infra/utils/: limiters.py  rate_limiter.py
src/libs/infra-py/tests/clients/: test_fipe_client.py
src/libs/infra-py/tests/repos/: test_alert_repository.py  test_cache_repository.py  test_listing_repository.py  test_opportunity_repository.py  test_rate_limit_event_repository.py  test_search_cache_repository.py
src/libs/infra-py/tests/scrapers/: __init__.py
src/libs/infra-py/tests/utils/: test_rate_limiter.py
src/scripts/: init_db.py  install-dev.sh  test-all.sh
(+83 files in other folders)
