[project]
name = "fipe-hunter"
version = "1.0.0"
description = "Automated vehicle opportunity finder for Brazilian marketplaces"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fipe-business",
    "fipe-infra",
    "fipe-adapters",
    "fipe-hunter-app",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "fake-useragent>=1.4.0",
    "python-telegram-bot>=20.7.0",
    "apscheduler>=3.10.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.23.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "responses>=0.24.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
    "libs/business-py/tests",
    "libs/infra-py/tests",
    "libs/adapters-py/tests",
    "apps/fastapi-app/tests",
    "apps/fastapi-app/tests/e2e",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--import-mode=importlib"
markers = [
    "e2e: end-to-end tests requiring running server",
]
