[project]
name = "fipe-hunter-app"
version = "1.0.0"
description = "FastAPI application for FIPE Hunter"
requires-python = ">=3.9"
dependencies = [
    "fipe-business",
    "fipe-infra",
    "fipe-adapters",
    "fastapi>=0.104.0",
    "slowapi>=0.1.9",
    "packaging>=23.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
