[project]
name = "fipe-infra"
version = "0.1.0"
description = "Infrastructure layer for FIPE Hunter - database, repositories"
requires-python = ">=3.9"
dependencies = [
    "fipe-business",
    "sqlalchemy>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "curl_cffi>=0.7.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fipe_infra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
